--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -22,12 +22,12 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <TextView
-        android:id="@+id/textViewLevel"
-        android:layout_width="408dp"
+        android:id="@+id/textViewUserRank"
+        android:layout_width="200dp"
         android:layout_height="29dp"
         android:layout_weight="1"
-        android:text="Level: Fresher"
-        android:textAlignment="center"
+        android:text="Novice"
+        android:textAlignment="textEnd"
         android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,6 +35,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
         app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/textViewUserScore"
+        android:layout_width="180dp"
+        android:layout_height="26dp"
+        android:layout_marginStart="12dp"
+        android:layout_weight="1"
+        android:text="(20/100)"
+        android:textAlignment="textStart"
+        android:textSize="18dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textViewUserRank"
+        app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
+        app:layout_constraintVertical_bias="0.002" />
 
     <Button
         android:id="@+id/buttonLogout"
@@ -58,19 +72,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewLevel" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewUserRank" />
 
     <Button
         android:id="@+id/buttonPersonalInfo"
         android:layout_width="196dp"
         android:layout_height="46dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="12dp"
         android:drawableEnd="@drawable/baseline_boy_24"
         android:text="Thông tin của bạn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewLevel" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonPersonalize" />
 
     <Button
         android:id="@+id/buttonChangePassword"
@@ -92,6 +106,16 @@
         android:src="@drawable/avatar_ai"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.368"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progressBar2"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
