--- a/app/src/main/res/layout/item_message_other.xml
+++ b/app/src/main/res/layout/item_message_other.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -16,13 +17,31 @@
         android:scaleType="centerCrop"
         android:src="@drawable/avatar_ai" />
 
-    <TextView
-        android:id="@+id/textMessage"
+    <!-- Nội dung văn bản + nút nằm dọc -->
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/bubble_left"
-        android:textColor="#000000"
-        android:textSize="16sp"
-        android:padding="10dp"
-        android:textIsSelectable="true"/>
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bubble_left"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            android:padding="10dp"
+            android:textIsSelectable="true" />
+
+        <ImageButton
+            android:id="@+id/speakButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="Phát giọng nói"
+            android:src="@drawable/tts"
+            app:tint="@color/black" />
+    </LinearLayout>
+
 </LinearLayout>
